--- a/gobang-service/src/main/resources/gobang/src/styles.css
+++ b/gobang-service/src/main/resources/gobang/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  height: 100%;
+}
+
+@font-face {
+  font-family: arial-rounded-mt;
+  src: url(/assets/font/arial-rounded-mt.ttf);
+}
