--- a/gobang-service/src/main/resources/gobang/src/app/app.component.html
+++ b/gobang-service/src/main/resources/gobang/src/app/app.component.html
@@ -1,28 +1,2 @@
-<div class="container-fluid d-flex h-100">
-  <div class="container-fluid d-flex justify-content-center align-self-center"
-       id="overflow-container">
-    <h1 class="hollow-text">
-      GOBANG
-    </h1>
-    <div class="row no-gutters" id="middle-panel">
-      <div class="row w-100 no-gutters">
-        <div class="col d-flex justify-content-center">
-          <img alt="Chess Board Banner"
-               id="chess-board-img"
-               src="/assets/img/chessBoardBanner.png">
-        </div>
-      </div>
-      <div class="row w-100 no-gutters">
-        <div class="col d-flex justify-content-center">
-          <button type="button" id="create-game-btn" [routerLink]="['game']"
-                  class="btn major-dark-btn">
-            Create Game
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
+<router-outlet>
+</router-outlet>
