:construction: Tentative code that can present a basic interaction with Gobang (still have bugs)

--- a/gobang-service/src/main/resources/gobang/src/app/game.component.html
+++ b/gobang-service/src/main/resources/gobang/src/app/game.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid h-100">
   <app-share-the-link [link]="'http://example.com/games/1555'"></app-share-the-link>
-  <app-chess-board [size]="15"></app-chess-board>
+  <app-chess-board></app-chess-board>
   <app-status-message></app-status-message>
 </div>
