--- a/gobang-service/src/main/resources/gobang/src/app/share-the-link/share-the-link.component.html
+++ b/gobang-service/src/main/resources/gobang/src/app/share-the-link/share-the-link.component.html
@@ -2,6 +2,6 @@
   <button class="major-dark-btn btn" id="share-the-link-btn">
     Share the link
   </button>
-
+  <span class="caret right" [style.margin-left]="'10px'"></span>
   <a class="align-middle" id="link" href="{{link}}">{{link}}</a>
 </div>
