--- a/gobang-service/src/main/resources/gobang/src/styles.css
+++ b/gobang-service/src/main/resources/gobang/src/styles.css
@@ -12,3 +12,22 @@ html, body {
   font-family: arial-rounded-mt;
   src: url(/assets/font/arial-rounded-mt.ttf);
 }
+
+.caret {
+  width: 0;
+  height: 0;
+  display: inline-block;
+  border: 10px solid transparent;
+}
+.caret.down{
+  border-top-color: black;
+}
+.caret.right{
+  border-left-color: black;
+}
+.caret.up{
+  border-bottom-color: black;
+}
+.caret.left{
+  border-right-color: black;
+}
