--- a/gobang-service/src/main/resources/gobang/src/app/home.component.html
+++ b/gobang-service/src/main/resources/gobang/src/app/home.component.html
@@ -1,26 +1,17 @@
-<div class="container-fluid d-flex h-100">
-  <div class="container-fluid d-flex justify-content-center align-self-center"
-       id="overflow-container">
+<div id="container">
+  <div id="overflow-container">
     <h1 class="hollow-text">
       GOBANG
     </h1>
-    <div class="row no-gutters" id="middle-panel">
-      <div class="row w-100 no-gutters">
-        <div class="col d-flex justify-content-center">
-          <img alt="Chess Board Banner"
-               id="chess-board-img"
-               src="/assets/img/chessBoardBanner.png">
-        </div>
-      </div>
-      <div class="row w-100 no-gutters">
-        <div class="col d-flex justify-content-center">
-          <button type="button"
-                  (click)="connectToGame()"
-                  class="btn major-dark-btn" [style.margin-top]="'20px'">
-            Create Game
-          </button>
-        </div>
-      </div>
+    <div id="middle-panel">
+      <img alt="Chess Board Banner"
+           id="chess-board-img"
+           src="/assets/img/chessBoardBanner.png">
+      <button type="button"
+              (click)="connectToGame()"
+              class="btn major-dark-btn" [style.margin-top]="'20px'">
+        Create Game
+      </button>
     </div>
   </div>
 </div>
