--- a/gobang-service/src/main/resources/gobang/src/app/home.component.html
+++ b/gobang-service/src/main/resources/gobang/src/app/home.component.html
@@ -1,7 +1,7 @@
 <div id="container">
   <div id="overflow-container">
     <h1 class="hollow-text">
-      GOBANG
+      {{title.toUpperCase()}}
     </h1>
     <div id="middle-panel">
       <img alt="Chess Board Banner"
