:sparkles: Stubbing works / Can play offline.

--- a/gobang-service/src/main/resources/gobang/src/app/home.component.html
+++ b/gobang-service/src/main/resources/gobang/src/app/home.component.html
@@ -8,7 +8,7 @@
            id="chess-board-img"
            src="/assets/img/chessBoardBanner.png">
       <button type="button"
-              (click)="connectToGame()"
+              (click)="createGame()"
               class="btn major-dark-btn" [style.margin-top]="'20px'">
         Create Game
       </button>
