:lipstick: Homepage is powerfully RWD now

--- a/gobang-service/src/main/resources/gobang/src/app/chess-board/chess-board.component.css
+++ b/gobang-service/src/main/resources/gobang/src/app/chess-board/chess-board.component.css
@@ -2,6 +2,13 @@
   --bowl-height: 144px;
 }
 
+#container {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
 .chess-bowl {
   margin-right: 20px;
   margin-left: 20px;
