--- a/gobang-service/src/main/resources/gobang/src/app/chess-board/chess-board.component.html
+++ b/gobang-service/src/main/resources/gobang/src/app/chess-board/chess-board.component.html
@@ -1,9 +1,7 @@
 
-<div class="d-flex justify-content-center"
+<div id="container"
      [style.margin-top]="'15px'">
-  <img src="assets/img/whiteChessBowl.svg"
-       class="chess-bowl d-none d-xl-block"/>
+  <img src="assets/img/whiteChessBowl.svg" class="chess-bowl"/>
   <canvas id="chess-board" width="821" height="740"></canvas>
-  <img src="assets/img/blackChessBowl.svg"
-       class="chess-bowl d-none d-xl-block"/>
+  <img src="assets/img/blackChessBowl.svg" class="chess-bowl"/>
 </div>
