--- a/gobang-service/src/main/resources/gobang/src/app/game.component.html
+++ b/gobang-service/src/main/resources/gobang/src/app/game.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid h-100">
+<div [style.background-color]="'var(--primary-light-grown)'">
   <app-share-the-link></app-share-the-link>
   <app-chess-board></app-chess-board>
   <app-status-message></app-status-message>
