--- a/gobang-service/src/main/resources/gobang/src/app/app.component.css
+++ b/gobang-service/src/main/resources/gobang/src/app/app.component.css
@@ -1,8 +1,11 @@
 
 .major-dark-btn {
   color: white;
-  padding: 10px 15px 10px 15px;
-  border-radius: 20px;
+  padding: 25px 30px 25px 30px;
+  border-radius: 48px;
+  box-shadow: 0 3px 6px #00000029;
+  font-family: arial-rounded-mt, serif;
+  border: 0;
   background-color: var(--primary-dark-grown);
 }
 
