:recycle: Move the angular module (/gobang-service/../resources/gobang) out to be /gobang-web

--- a/gobang-web/src/app/home.component.html
+++ b/gobang-web/src/app/home.component.html
@@ -1,4 +1,4 @@
-<div id="container" (window:resize)="onResize($event)">
+<div id="container">
   <div id="middle-panel">
     <header id="title-banner" class="hollow-text">
       {{title.toUpperCase()}}
