:lipstick: Gobang chess board now works more prettly

--- a/gobang-web/src/app/chess-board/chess-board.component.html
+++ b/gobang-web/src/app/chess-board/chess-board.component.html
@@ -2,6 +2,6 @@
 <div id="container"
      [style.margin-top]="'15px'">
   <img src="assets/img/whiteChessBowl.svg" class="chess-bowl"/>
-  <canvas id="chess-board" width="821" height="740"></canvas>
+  <canvas id="chess-board" ></canvas>
   <img src="assets/img/blackChessBowl.svg" class="chess-bowl"/>
 </div>
