:sparkles: Share the link completed

--- a/gobang-web/src/app/game.component.html
+++ b/gobang-web/src/app/game.component.html
@@ -1,4 +1,5 @@
 <div [style.background-color]="'var(--primary-light-grown)'">
+  <p-toast position="top-center"></p-toast>
   <app-share-the-link></app-share-the-link>
   <app-chess-board></app-chess-board>
   <app-status-message></app-status-message>
