--- a/gobang-web/src/app/share-the-link/share-the-link.component.html
+++ b/gobang-web/src/app/share-the-link/share-the-link.component.html
@@ -1,5 +1,5 @@
 <div id="container">
-  <button id="share-the-link-btn"
+  <button class="btn" id="share-the-link-btn"
           (click)="notifyMessage('Copied', 'The link has been copied to the clipboard.')"
           [cdkCopyToClipboard]="link">
     share the link
