--- a/gobang-web/src/app/home.component.html
+++ b/gobang-web/src/app/home.component.html
@@ -9,7 +9,7 @@
     <div id="bottom-panel">
       <button type="button"
               (click)="createGame()" id="create-game-btn"
-              class="major-dark-btn">
+              class="btn major-dark-btn">
         Create Game
         <p-progressSpinner id="spinner" [style]="{width: '30px', height: '30px'}" [strokeWidth]="'4px'" ></p-progressSpinner>
       </button>
