--- a/gobang-web/src/styles.css
+++ b/gobang-web/src/styles.css
@@ -35,3 +35,11 @@ html, body {
   cursor: pointer;
   border: 0;
 }
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -100px;
+}
